# python-resume-generator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
.github/workflows/: deploy.yml
data/: example.json
resume_generator/: __main__.py  cli.py
resume_generator/entities/: __init__.py  certification.py  contact.py  education.py  language.py  resume.py  skill.py  work_experience.py
templates/basic/: index.css  index.html
tests/: test_resume_generator.py
tests/inputs/: invalid_email.json  invalid_schema.json  valid.json  valid_empty_schema.json  valid_empty_values.json
